--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
@@ -8,7 +8,7 @@
           All success store from our cleints
         </h1>
         <h4>If you have a success story please share it with us</h4>
-        <a class="btn w-25 mt-4" style="background-color: #FB7B53;color:white;">Add Post</a>
+        <a routerLink="/addpost" class="btn w-25 mt-4" style="background-color: #FB7B53;color:white;">Add Post</a>
       </div>
     </div>
     <div class="row gx-6 gy-8 justify-content-center justify-content-md-start mb-lg-10 mb-md-8 mb-6">
