--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/addpost/addpost.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/addpost/addpost.component.html
@@ -1,4 +1,4 @@
-<form  #formData="ngForm" class="d-grid gap-lg-5 gap-3" (ngSubmit)="Addpost(formData.value)">
+<form #formData="ngForm" class="d-grid gap-lg-5 gap-3 mx-auto" style="width: 60%; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); height: 70vh; margin: 8% 0 5% 0; padding: 2%; background-color: lightgray" (ngSubmit)="Addpost(formData.value)">
   <div class="d-lg-flex d-grid align-items-center justify-content-lg-between gap-lg-6 gap-4">
     <div class="d-grid gap-lg-3 gap-2 w-100">
       <label for="name">StoryContent <span class="text-primary">*</span></label>
