--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -13,6 +13,11 @@
               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Animal Adoption</span>
             </a>
           </li>
+          <li>
+            <a routerLink="/dashboard/AddAdminAdoption" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Add Admin Adoption</span>
+            </a>
+          </li>
 
           <li>
             <a routerLink="/dash/ContactAdmin" class="nav-link px-0 align-middle">
