creat 2 component for posts in admin

--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -18,6 +18,16 @@
               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Add Admin Adoption</span>
             </a>
           </li>
+          <li>
+            <a routerLink="/dashboard/allpostadmin" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Posts</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/dashboard/notacceptpostadmin" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Not Accepted Posts</span>
+            </a>
+          </li>
 
           <li>
             <a routerLink="/dash/ContactAdmin" class="nav-link px-0 align-middle">
