contacts api + added the user contact component

--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -80,7 +80,7 @@
             <a routerLink="/animals" class="slide-horizontal">Adoption </a>
           </li>
           <li class="menu-link">
-            <a href="contact-us.html" class="slide-vertical" data-splitting>Contact</a>
+            <a routerLink="contactus" class="slide-vertical" data-splitting>Contact</a>
           </li>
         </ul>
       </nav>
