--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -34,51 +34,17 @@
           <li class="menu-link">
             <a routerLink="/addpost" class="slide-vertical" data-splitting>addpost</a>
           </li>
+        
+          <li class="menu-link">
+            <a routerLink="/Shelters" class="slide-horizontal" data-splitting>Shelters</a>
+            </li>
           <li class="menu-link">
             <a routerLink="/allposts" class="slide-vertical" data-splitting>Our Community</a>
           </li>
-          <li class="menu-item">
-            <button class="slide-vertical" data-splitting>
-              Pages
-              <span class="lh-0"><i class="ph ph-plus"></i></span>
-            </button>
-            <ul class="sub-menu">
-              <li class="menu-item">
-                <button class="slide-vertical" data-splitting>
-                  Services
-                  <span class="lh-0"><i class="ph ph-plus"></i></span>
-                </button>
-                <ul class="sub-menu">
-                  <li class="menu-link">
-                    <a href="services.html" class="slide-horizontal" data-splitting>Services</a>
-                  </li>
-                  <li class="menu-link">
-                    <a href="service-details.html" class="slide-horizontal" data-splitting>
-                      Service
-                      Details
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li class="menu-item">
-                <button class="slide-vertical" data-splitting>
-                  Blogs
-                  <span class="lh-0"><i class="ph ph-plus"></i></span>
-                </button>
-                <ul class="sub-menu">
-                  <li class="menu-link">
-                    <a href="blogs.html" class="slide-horizontal" data-splitting>Blogs</a>
-                  </li>
-                  <li class="menu-link">
-                    <a href="blog-details.html" class="slide-horizontal" data-splitting>
-                      Blogs
-                      Details
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          
+              
+           
+        
           <li class="menu-link">
             <a routerLink="/animals" class="slide-horizontal">Adoption </a>
           </li>
