--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
@@ -49,13 +49,11 @@
             <textarea class="form-control" id="additionalDetails" [(ngModel)]="adoptionDetails.userMoreDetails" name="userMoreDetails"></textarea>
           </div>
 
-          <!-- Submit Button -->
           <div class="text-center">
-            <button type="submit" class="btn-primary" [disabled]="adoptionForm.invalid">Submit Adoption Request</button>
+            <button type="submit" class="btn btn-primary" [disabled]="adoptionForm.invalid">Submit Adoption Request</button>
           </div>
 
         </form> <!-- End of Form -->
-
       </div> <!-- End of col-lg-8 -->
     </div> <!-- End of row -->
   </div> <!-- End of container -->
