--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -1,15 +1,9 @@
-
 <!-- back to top -->
 <button class="back-to-top position-fixed end-0 bottom-0 d-center me-5">
   <span class="text-h4">
     <i class="ph ph-arrow-up"></i>
   </span>
 </button>
-
-
-
-
-
 
 <!-- header -->
 <!-- header section start -->
@@ -32,24 +26,16 @@
             <a href="about-us.html" class="slide-vertical" data-splitting>About</a>
           </li>
           <li class="menu-link">
-            <a routerLink="/addpost" class="slide-vertical" data-splitting>addpost</a>
+            <a routerLink="/addpost" class="slide-vertical" data-splitting>Add Post</a>
           </li>
-        
           <li class="menu-link">
             <a routerLink="/Shelters" class="slide-horizontal" data-splitting>Shelters</a>
-            </li>
+          </li>
           <li class="menu-link">
             <a routerLink="/allposts" class="slide-vertical" data-splitting>Our Community</a>
           </li>
-          
-              
-           
-        
-              </li>
-            </ul>
-          </li>
           <li class="menu-link">
-            <a routerLink="/animals" class="slide-horizontal">Adoption </a>
+            <a routerLink="/animals" class="slide-horizontal">Adoption</a>
           </li>
           <li class="menu-link">
             <a routerLink="contactus" class="slide-vertical" data-splitting>Contact</a>
@@ -57,7 +43,6 @@
         </ul>
       </nav>
       <div class="nav-btns d-flex align-items-center gap-lg-5 gap-3">
-
         <!-- search icon -->
         <button class="search-btn text-2xl font-semibold text-n20">
           <i class="ph ph-magnifying-glass"></i>
@@ -65,9 +50,7 @@
 
         <a routerLink="/userprofile" class="btn-primary text-nowrap" *ngIf="userId != ''">Profile</a>
         <a (click)="logout()" id="NavBarProfile" *ngIf="userId != ''">Logout</a>
-
         <a routerLink="/login" class="btn-primary text-nowrap" *ngIf="userId == ''">Login</a>
-
         <button class="menu-toggle-btn text-2xl">
           <i class="ph ph-list"></i>
         </button>
@@ -77,7 +60,6 @@
 </header>
 <!-- header section end -->
 <!-- search form -->
-
 <div class="search-form-wrapper position-fixed top-0 start-0 w-100 vh-100 d-flex align-items-center justify-content-center bg-n10">
   <button class="search-close-btn position-absolute top-0 end-0 text-2xl text-n0 mt-5 me-5">
     <i class="ph ph-x"></i>
