--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
     <!-- navbar area -->
     <div class="d-flex align-items-center justify-content-between px-lg-0 px-4 py-lg-5 py-3">
       <div class="logo">
-        <a href="index.html">
+        <a routerLink="/">
           <img class="w-100 d-block d-sm-none" src="assets/images/favicon.png" alt="logo">
           <img class="w-100 d-none d-sm-block" src="assets/images/logo.png" alt="logo">
         </a>
@@ -20,10 +20,10 @@
       <nav class="navbar-area">
         <ul class="nav-menu-items d-lg-flex d-grid gap-3xl-8 gap-xxl-6 gap-4">
           <li class="menu-link">
-            <a href="index.html" class="slide-vertical" data-splitting>Home</a>
+            <a routerLink="/" class="slide-vertical" data-splitting>Home</a>
           </li>
           <li class="menu-link">
-            <a href="about-us.html" class="slide-vertical" data-splitting>About</a>
+            <a routerLink="about-us.html" class="slide-vertical" data-splitting>About</a>
           </li>
           <li class="menu-link">
             <a routerLink="/addpost" class="slide-vertical" data-splitting>Add Post</a>
@@ -38,7 +38,7 @@
             <a routerLink="/animals" class="slide-horizontal">Adoption</a>
           </li>
           <li class="menu-link">
-            <a routerLink="contactus" class="slide-vertical" data-splitting>Contact</a>
+            <a routerLink="/contactus" class="slide-vertical" data-splitting>Contact</a>
           </li>
         </ul>
       </nav>
