--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -19,6 +19,12 @@
             </a>
           </li>
           <li>
+            <a routerLink="/dashboard/sheltersadmin" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Nshelters</span>
+            </a>
+          </li>
+
+          <li>
             <a routerLink="/dashboard/allpostadmin" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Posts</span>
             </a>
@@ -41,9 +47,9 @@
             </a>
           </li>
 
-        
 
-         
+
+
 
 
         </ul>
