--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
@@ -9,6 +9,19 @@
         <!-- Start of Form -->
         <form #adoptionForm="ngForm" (ngSubmit)="submitAdoptionForm(adoptionForm)">
 
+          <!-- Name Field -->
+          <div class="form-group mb-4">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" [(ngModel)]="adoptionDetails.userName" name="userName" required>
+          </div>
+
+          <!-- Email Field -->
+          <div class="form-group mb-4">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" [(ngModel)]="adoptionDetails.userEmail" name="userEmail" required>
+          </div>
+
+
           <!-- Medical Status -->
           <div class="form-group mb-4">
             <label for="medicalStatus">Medical Status</label>
